# BeginToCodeWithPython

./: .gitignore  .gitmodules  .markdownlint.json  .nojekyll  .pre-commit-config.yaml  README.md  _quarto.yml  index.html  index.qmd  postBuild  pyproject.toml  robots.txt  ruff.toml  search.json  sitemap.xml  test.txt
.github/workflows/: cleanup.yml  publish.yml
01_ProgrammingFundamentals/02_PythonAndProgramming/: Chapter_02.html  Chapter_02.ipynb  Chapter_02.md  Chapter_02.qmd
01_ProgrammingFundamentals/03_PythonProgramStructure/: Chapter_03.html  Chapter_03.md  Chapter_03.qmd
01_ProgrammingFundamentals/04_WorkingWithVariables/: Chapter_04.html  Chapter_04.md  Chapter_04.qmd
01_ProgrammingFundamentals/05_MakingDecisions/: Chapter_05.html  Chapter_05.md  Chapter_05.qmd
01_ProgrammingFundamentals/06_RepeatingActionsWithLoops/: Chapter_06.html  Chapter_06.md  Chapter_06.qmd
01_ProgrammingFundamentals/07_UsingFunctions/: Chapter_07.html  Chapter_07.md  Chapter_07.qmd
01_ProgrammingFundamentals/08_StoringCollectionsOfData/: Chapter_08.html  Chapter_08.md  Chapter_08.qmd
02_AdvancedProgramming/09_UsingClasses/: Chapter_09.html  Chapter_09.md  Chapter_09.qmd  Chapter_09_ExtensionExercises.html  Chapter_09_ExtensionExercises.md  Chapter_09_ExtensionExercises.qmd
02_AdvancedProgramming/10_UseClassesToCreateActiveObjects/: Chapter_10.html  Chapter_10.md  Chapter_10.qmd
02_AdvancedProgramming/11_ObjectBasedSolutionDesign/: Chapter_11.html  Chapter_11.md  (+1 more)
quartoScripts/: convert_callout_to_GFM.lua  remove_ansi.lua  restoreMarkdownToRepositoryHierachy.sh
(+579 files in other folders)
