[project]
name = "begintocodewithpython"
version = "0.1.0"
description = "A Collection of Exercises and Examples from the book, Begin to Code With Python by Rob Miles"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "quarto-cli>=1.8.25",
]
